--- a/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/persons.component.html
+++ b/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/persons.component.html
@@ -23,31 +23,27 @@
               <table class="table table-hover table-striped">
                   <thead>
                       <tr>
-                          <th>{{l('UserName')}}</th>
-                          <th>{{l('FullName')}}</th>
+                          <th>{{l('Name')}}</th>
                           <th>{{l('EmailAddress')}}</th>
-                          <th>
-                              <div style="text-align:center">{{l('IsActive')}}</div>
-                          </th>
+                          <th>{{l('Address')}}</th>
+                        
+                         
+                          
                           <th>{{l('Actions')}}</th>
                       </tr>
                   </thead>
                   <tbody>
-                      <tr *ngFor="let user of users | paginate: { id: 'server', itemsPerPage: pageSize, currentPage: pageNumber, totalItems: totalItems }">
-                          <td>{{user.userName}}</td>
-                          <td>{{user.fullName}}</td>
-                          <td>{{user.emailAddress}}</td>
-                          <td align="center">
-                              <i class="material-icons" *ngIf="user.isActive" style="color:green;">check_box</i>
-                              <i class="material-icons" *ngIf="!user.isActive" style="color:red;">indeterminate_check_box</i>
-                          </td>
+                      <tr *ngFor="let person of persons| paginate: { id: 'server', itemsPerPage: pageSize, currentPage: pageNumber, totalItems: totalItems }">
+                          <td>{{person.name}}</td>
+                          <td>{{person.emailAddress}}</td>
+                          <td>{{person.address}}</td>
                           <td class="dropdown">
                               <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                   <i class="material-icons">menu</i>
                               </a>
                               <ul class="dropdown-menu pull-right">
-                                  <li><a href="javascript:void(0);" class="waves-effect waves-block" (click)="editUser(user)"><i class="material-icons">create</i>{{l('Edit')}}</a></li>
-                                  <li><a href="javascript:void(0);" class="waves-effect waves-block" (click)="delete(user)"><i class="material-icons">delete_sweep</i>{{l('Delete')}}</a></li>
+                                 <li><a href="javascript:void(0);" class="waves-effect waves-block" (click)="editUser(user)"><i class="material-icons">create</i>{{l('Edit')}}</a></li>
+                                  <li><a href="javascript:void(0);" class="waves-effect waves-block" (click)="delete(user)"><i class="material-icons">delete_sweep</i>{{l('Delete')}}</a></li> 
                               </ul>
                           </td>
                       </tr>
