完成模态框的加载。

--- a/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/create-or-edit-person-modal/create-or-edit-person-modal.component.html
+++ b/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/create-or-edit-person-modal/create-or-edit-person-modal.component.html
@@ -1,3 +1,18 @@
-<p>
-  create-or-edit-person-modal works!
-</p>
+<div bsModal #createOrEditModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="createOrEditModal">
+
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+
+      <p>
+        create-or-edit-person-modal works!
+      </p>
+
+    </div>
+
+
+
+  </div>
+
+
+
+</div>
