--- a/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/create-or-edit-person-modal/create-or-edit-person-modal.component.html
+++ b/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/create-or-edit-person-modal/create-or-edit-person-modal.component.html
@@ -1,12 +1,12 @@
-<div bsModal #createOrEditModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="createOrEditModal"
-  aria-hidden="true">
+<div bsModal #createOrEditModal="bs-modal" (onShown)="onShown()" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="createOrEditModal"
+  aria-hidden="true" [config]="{backdrop: 'static'}">
 
   <div class="modal-dialog ">
-    <div class="modal-content">
+    <div #modalContent class="modal-content">
 
 
 
-      <form *ngIf="active" id=frm_createOrEditPerson novalidate (ngSubmit)="save()" #personForm="ngForm">
+      <form *ngIf="active" #createOrEditPersonForm="ngForm" id=frm_createOrEditPerson novalidate (ngSubmit)="save()" >
 
 
         <div class="modal-header">
@@ -20,56 +20,62 @@
           </h4>
         </div>
         <div class="modal-body">
-
-
+          <!-- "name": "string",
+            "emailAddress": "string",
+            "address": "string" -->
 
           <div class="row clearfix">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-              <div class="input-group">
-                <div class="input-group-addon">Name</div>
-
-
-
-                <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount">
+              <div class="form-group form-float">
+                <div class="form-line">
+                  <label for="name" class="form-label">Name</label>
+                  <input type="text" [(ngModel)]="person.name" required minlength="2"  maxlength="90" class="validate form-control" id="name" name="name">
+                </div>
               </div>
-
-
             </div>
           </div>
+
 
 
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
+              <div class="form-group form-float">
+                <div class="form-line">
+                  <input type="email" name="emailAddress" [(ngModel)]='person.emailAddress'  pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{1,})+$" id="emailAddress" class="form-control validate">
 
-              <div class="input-group">
-                <div class="input-group-addon">EmailAddress</div>
-                <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount">
+                  <label for="emailAddress" class="form-label">EmailAddress</label>
+                </div>
               </div>
-
-
-
             </div>
           </div>
-
 
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-              <div class="input-group">
-                <div class="input-group-addon">Address</div>
-                <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount">
-              </div>
+              <div class="form-group form-float">
+                <div class="form-line">
+                  <input type="text" name="address" [(ngModel)]='person.address' id="address" class="form-control validate">
 
+                  <label for="address" class="form-label">address</label>
+                </div>
+              </div>
             </div>
           </div>
+
 
 
 
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" (click)="c('Close click')">Close</button>
+
+          <button [disabled]="saving" type="button" class="btn btn-default waves-effect" (click)="close()">
+            {{l("Cancel")}}
+          </button>
+          <button [disabled]="!createOrEditPersonForm.form.valid || saving" type="submit" class="btn btn-primary waves-effect">
+            {{l("Save")}}
+          </button>
         </div>
 
 
