--- a/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/persons.component.html
+++ b/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/persons.component.html
@@ -1,62 +1,72 @@
 <div class="row clearfix" [@routerTransition]>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <div class="card main-content">
-          <div class="header">
-              <h2>
-                  {{l('Persons')}}
-              </h2>
-              <ul class="header-dropdown m-r--5">
-                  <i class="fa fa-spin fa-spinner" *ngIf="isTableLoading"></i>
-                  <li class="dropdown">
-                      <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                          <i class="material-icons">more_vert</i>
-                      </a>
-                      <ul class="dropdown-menu pull-right">
-                          <li><a href="javascript:void(0);" class=" waves-effect waves-block()" (click)="refresh();"><i class="material-icons">refresh</i> {{l('Refresh')}}</a></li>
-                      </ul>
-                  </li>
-              </ul>
-          </div>
-          <div class="body table-responsive">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="card main-content">
+            <div class="header">
+                <h2>
+                    {{l('Persons')}}
+                </h2>
+                <ul class="header-dropdown m-r--5">
+                    <i class="fa fa-spin fa-spinner" *ngIf="isTableLoading"></i>
+                    <li class="dropdown">
+                        <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <i class="material-icons">more_vert</i>
+                        </a>
+                        <ul class="dropdown-menu pull-right">
+                            <li>
+                                <a href="javascript:void(0);" class=" waves-effect waves-block()" (click)="refresh();">
+                                    <i class="material-icons">refresh</i> {{l('Refresh')}}</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="body table-responsive">
 
-          <!-- ******************************************************** -->
-              <table class="table table-hover table-striped">
-                  <thead>
-                      <tr>
-                          <th>{{l('Name')}}</th>
-                          <th>{{l('EmailAddress')}}</th>
-                          <th>{{l('Address')}}</th>  
+                <!-- ******************************************************** -->
+                <table class="table table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th>{{l('Name')}}</th>
+                            <th>{{l('EmailAddress')}}</th>
+                            <th>{{l('Address')}}</th>
                             <th>{{l('Actions')}}</th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                      <tr *ngFor="let person of persons| paginate: { id: 'server', itemsPerPage: pageSize, currentPage: pageNumber, totalItems: totalItems }">
-                          <td>{{person.name}}</td>
-                          <td>{{person.emailAddress}}</td>
-                          <td>{{person.address}}</td>
-                          <td class="dropdown">
-                              <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                  <i class="material-icons">menu</i>
-                              </a>
-                              <ul class="dropdown-menu pull-right">
-                                 <li><a href="javascript:void(0);" class="waves-effect waves-block" (click)="editUser(person)"><i class="material-icons">create</i>{{l('Edit')}}</a></li>
-                                  <li><a href="javascript:void(0);" class="waves-effect waves-block" (click)="delete(person)"><i class="material-icons">delete_sweep</i>{{l('Delete')}}</a></li> 
-                              </ul>
-                          </td>
-                      </tr>
-                  </tbody>
-              </table>
-          <!-- ******************************************************** -->
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let person of persons| paginate: { id: 'server', itemsPerPage: pageSize, currentPage: pageNumber, totalItems: totalItems }">
+                            <td>{{person.name}}</td>
+                            <td>{{person.emailAddress}}</td>
+                            <td>{{person.address}}</td>
+                            <td class="dropdown">
+                                <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                    <i class="material-icons">menu</i>
+                                </a>
+                                <ul class="dropdown-menu pull-right">
+                                    <li>
+                                        <a href="javascript:void(0);" class="waves-effect waves-block" (click)="editPerson(person)">
+                                            <i class="material-icons">create</i>{{l('Edit')}}</a>
+                                    </li>
+                                    <li>
+                                        <a href="javascript:void(0);" class="waves-effect waves-block" (click)="delete(person)">
+                                            <i class="material-icons">delete_sweep</i>{{l('Delete')}}</a>
+                                    </li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <!-- ******************************************************** -->
 
-              <div class="text-align: center;" *ngIf="totalItems > pageSize">
-                  <pagination-controls (pageChange)="getDataPage($event)" id="server"></pagination-controls>
-              </div>
-              <button type="button" data-toggle="modal" class="btn btn-primary btn-circle waves-effect waves-circle waves-float pull-right" (click)="createPerson()">
-                  <i class="material-icons">add</i>
-              </button>
-          </div>
-      </div>
-  </div>
-</div> 
- 
+                <div class="text-align: center;" *ngIf="totalItems > pageSize">
+                    <pagination-controls (pageChange)="getDataPage($event)" id="server"></pagination-controls>
+                </div>
+                <button type="button" data-toggle="modal" class="btn btn-primary btn-circle waves-effect waves-circle waves-float pull-right"
+                    (click)="createPerson()">
+                    <i class="material-icons">add</i>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <app-create-or-edit-person-modal #createOrEditPersonModal (modalSave)="refresh()"></app-create-or-edit-person-modal>
