增加枚举类型。

--- a/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/create-or-edit-person-modal/create-or-edit-person-modal.component.html
+++ b/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/create-or-edit-person-modal/create-or-edit-person-modal.component.html
@@ -51,6 +51,18 @@
             </div>
           </div>
 
+
+          
+          <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+              
+
+              
+            </div>
+          </div>
+          
+
+
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
