提交代码，准备换种交互模式

--- a/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/persons.component.html
+++ b/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/persons.component.html
@@ -42,6 +42,10 @@
                                     <i class="material-icons">menu</i>
                                 </a>
                                 <ul class="dropdown-menu pull-right">
+                                        <li>
+                                                <a href="javascript:void(0);" class="waves-effect waves-block" (click)="editPerson(person)">
+                                                    <i class="material-icons">assignment</i>编辑电话本</a>
+                                            </li>
                                     <li>
                                         <a href="javascript:void(0);" class="waves-effect waves-block" (click)="editPerson(person)">
                                             <i class="material-icons">create</i>{{l('Edit')}}</a>
