提交代码，增加了删除电话和添加电话的功能。

--- a/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/create-or-edit-person-modal/create-or-edit-person-modal.component.html
+++ b/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/create-or-edit-person-modal/create-or-edit-person-modal.component.html
@@ -56,6 +56,12 @@
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
               
+              <div class="form-group">
+                <select name="phoneNumberType" id="phoneNumberType" required class='form-control'>
+                    
+                  <option value="">没有选择任何的信息</option>
+                </select>
+              </div>
 
               
             </div>
