修改代码处理点bug

--- a/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/persons.component.html
+++ b/src/angular/SPACore.PhoneBook/angular-phonebook/src/app/persons/persons.component.html
@@ -15,7 +15,7 @@
                     </div>
 
                     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 align-right ">
-                        <button class="btn btn-primary blue" ng-click="vm.openCreatePersonModal()">
+                        <button class="btn btn-primary blue" (click)="createPerson()">
                             <i class="fa fa-plus"></i>{{l('CreateNewPerson')}}
                         </button>
                     </div>
