--- a/src/PhoneBook-angular/src/app/persons/persons.component.html
+++ b/src/PhoneBook-angular/src/app/persons/persons.component.html
@@ -1,3 +1,58 @@
-<p>
-  persons works!
-</p>
+<div class="row clearfix" [@routerTransition]>
+
+
+
+
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+
+        <div class="card main-content">
+            <div class="header">
+                <h2>
+                    {{l('PhoneBook')}}
+                </h2>
+            </div>
+   
+
+
+
+
+<div class="row clearfix">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+        <div class="body">
+            
+            <div class="list-group">
+                <div href="#" class="list-group-item active" *ngFor="let person of people"  >
+                    <h4 class="list-group-item-heading">姓名：{{person.name}}  地址：{{person.address}}</h4>
+                    <p class="list-group-item-text">电子邮箱：{{person.emailAddress}}</p>
+                </div>
+            </div>
+            
+
+        </div>
+        
+        
+
+
+
+
+    </div>
+
+
+
+</div>
+</div>
+
+
+
+
+
+
+    </div>
+
+
+
+
+
+</div>
