--- a/src/PhoneBook-angular/src/app/persons/persons.component.html
+++ b/src/PhoneBook-angular/src/app/persons/persons.component.html
@@ -31,21 +31,55 @@
                 </div>
 
 
+                <div class="row clearfix  ">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
+                        <div class="  input-group   btn-group btn-primary form-group                  ">
+                            <input [(ngModel)]="filter" name="filterText" auto-focus class="form-control " [placeholder]="l('SearchWithThreeDot')" type="text">
+                            <span class="input-group-btn">
+                                <button (click)="refresh()" class="btn btn-default" type="submit">
+                                    <i class="icon-magnifier"></i>
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+
 
             </div>
 
 
 
 
-            <div class="row clearfix">
+            <div class="row  ">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
                     <div class="body">
 
                         <div class="list-group">
-                            <div href="#" class="list-group-item active" *ngFor="let person of people">
-                                <h4 class="list-group-item-heading">姓名：{{person.name}} 地址：{{person.address}}</h4>
-                                <p class="list-group-item-text">电子邮箱：{{person.emailAddress}}</p>
+                            <div class="list-group-item   " *ngFor="let person of people">
+
+                                <h5 class="list-group-item-heading  ">
+                                    姓名：{{person.name}} 地址：{{person.address}}
+
+                                    <span class="buttons">
+                                        <button (click)="editPerson(person)" title='编辑联系人' class="btn btn-circle btn-icon-only color-code green">
+                                            <i class="icon-pencil"></i>
+                                        </button>
+                                        <button (click)="editPhoneNumbers(person)" title='修改电话本内容' class="btn btn-circle btn-icon-only " href="javascript:;">
+                                            <i class="icon-calendar"></i>
+                                        </button>
+                                        <button (click)="delete(person)" title="删除联系人" class="btn btn-circle btn-icon-only red delete-person" href="javascript:;">
+                                            <i class="icon-trash"></i>
+                                        </button>
+                                    </span>
+
+                                </h5>
+                                <p class="list-group-item-text">
+                                    电子邮箱：{{person.emailAddress}}</p>
+
+
+
                             </div>
                         </div>
 
